# mneme

./: Cargo.toml  README.md  index.html
docs/: index.html
mneme-api/: Cargo.toml
mneme-api/src/: lib.rs
mneme-consolidate/: Cargo.toml
mneme-consolidate/src/: backends.rs  lib.rs
mneme-core/: Cargo.toml
mneme-core/src/: lib.rs
mneme-embed/: Cargo.toml
mneme-embed/src/: backends.rs  lib.rs
mneme-server/: Cargo.toml
mneme-server/src/: main.rs
mneme-store/: Cargo.toml
mneme-store/src/: lib.rs  memory.rs  memory_content.rs  qdrant_envelope.rs  sqlite_content.rs  sqlite_envelope.rs
tests/: Cargo.toml  integration.rs
tests/src/: lib.rs
