[package]
name = "mneme-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
mneme-core = { path = "../mneme-core" }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { workspace = true }

[features]
default = []
openai = ["dep:reqwest"]
